teachme/teachme-backend-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachme-backend-db
  namespace: teachme
  labels:
    app: teachme-backend-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teachme-backend-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: teachme-backend-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: teachme-backend-db-pvc
