teachme/teachme-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachme-keycloak
  namespace: teachme
  labels:
    app: teachme-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teachme-keycloak
  template:
    metadata:
      labels:
        app: teachme-keycloak
    spec:
      containers:
        - name: keycloak
          # NOTE: This image tag is auto-updated by GitHub Actions
          # Do not manually edit - the workflow will overwrite this
          image: ghcr.io/davidcode2/teachme-keycloak:20260222.9c44629
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
