teachme/teachme-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teachme-backend-service
  namespace: teachme
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: teachme-backend
