teachme/teachme-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teachme-frontend-service
  namespace: teachme
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: teachme-frontend
