teachme/teachme-keycloak-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teachme-keycloak-db-service
  namespace: teachme
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: teachme-keycloak-db
