teachme/teachme-keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teachme-keycloak-service
  namespace: teachme
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: management
      port: 9000
      targetPort: 9000
  selector:
    app: teachme-keycloak
