teachme/teachme-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teachme-backend-ingress
  namespace: teachme
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: api.teachly.jakob-lingel.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teachme-backend-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.teachly.jakob-lingel.dev
      secretName: teachme-backend-tls
