teachme/teachme-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teachme-frontend-ingress
  namespace: teachme
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: app.teachly.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teachme-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - app.teachly.store
      secretName: teachme-frontend-tls
